fix bug answer A and config show Mathjax menu

--- a/application/modules/teacher/views/question/create_question.html
+++ b/application/modules/teacher/views/question/create_question.html
@@ -643,7 +643,8 @@
 		"HTML-CSS": {
 			scale: 88,
 			minScaleAdjust: 88,
-			availableFonts: ["TeX"]
+			availableFonts: ["TeX"],
+			showMathMenu: false
   		},
  		MMLorHTML: {prefer: "HTML"}
   	});
