Add manage question gui and slide animation

--- a/application/modules/teacher/views/question/tab_question_type.html
+++ b/application/modules/teacher/views/question/tab_question_type.html
@@ -35,4 +35,5 @@
     		}
 			?>
 	</select>
+	<span style="float:right;margin-right:10px;"><a id="manage_question_slide" href="javascript:void()" class="btn btn-small btn-primary">Quản lý câu hỏi</a></span>
 </ul>
