--- a/application/modules/teacher/views/question/manage_question.html
+++ b/application/modules/teacher/views/question/manage_question.html
@@ -1,230 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Education Network</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <link href="public/css/bootstrap.css" rel="stylesheet" media="screen">
-    <style type="text/css">
-      
-    </style>
-    <link href="public/css/bootstrap-responsive.css" rel="stylesheet" media="screen">
-    <link href="public/css/style.css" rel="stylesheet" media="screen">
-  </head>  
-  <body>
-	<div class="navbar navbar-inverse navbar-fixed-top">
-		<div class="navbar-inner">
-			<div class="container-fluid">
-				<!-- .btn-navbar is used as the toggle for collapsed navbar content -->
-				<a class="btn btn-navbar" data-toggle="collapse"
-					data-target=".nav-collapse"> <span class="icon-bar"></span> <span
-					class="icon-bar"></span> <span class="icon-bar"></span> </a> <a
-					class="brand" href="#" style="margin-left:11px;">Education</a>
-				<div class="nav-collapse collapse">
-					<!-- .nav, .navbar-search, .navbar-form, etc -->
-					<ul class="nav">
-						<li><a href="#">Trang chủ</a></li>
-						<li><a href="#">Link</a></li>
-						<li><a href="#">Link</a></li>
-					</ul>
-					<form class="navbar-search pull-left">
-						<i class="icon-search"
-							style="position: absolute; top: 6px; left: 12px;"></i> <input
-							type="text" class="search-query" placeholder="Search"
-							style="padding-left: 33px;">
-					</form>
-					<ul class="nav pull-right">
-						<li><a href="#"><i
-								class="icon-user icon-white"></i> Người dùng </a></li>
-						<li><a href="#"><i class="icon-book icon-white"></i> Thư
-								viện</a></li>
-						<li class="dropdown"><a href="#" class="dropdown-toggle"
-							data-toggle="dropdown"> Tài khoản <b class="caret"></b> </a>
-							<ul class="dropdown-menu">
-								<li><a href="#">Trợ giúp</a>
-								</li>
-								<li><a href="#">Cài đặt</a>
-								</li>
-								<li><a href="#">Thoát</a>
-								</li>
-							</ul>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</div>
+<div class="span12" style="margin-left:10px;">
+	<div class="page-header" style="padding-bottom:10px;">
+		<h4 style="display:inline">Danh sách câu hỏi đã tạo</h4>
+		<span style="float:right;margin-right:10px;"><a id="create_question_slide" href="javascript:void()" class="btn btn-small btn-primary">Tạo câu hỏi</a></span> 
 	</div>
-	<div class="container-fluid">		
-		<div class="row-fluid">
-    		<div class="span2">
-    			<!--sidebar content -->
-    			<div class="well sidebar-nav">
-	    			<ul class="nav nav-list">
-					  <li class="nav-header">
-					  	<a href="#" class="tab-link active"><img src="images/leaf-green.png" class="profile-tab-avatar"> Username</a>
-					  	<a href="/">
-                    		Learning Dashboard
-              			</a>
-					  </li>
-					  <li class="nav-header">Thành tích</li>
-					  <li class="nav-header">Lớp đang dạy</li> 
-					  <li><a href="#" class="list"><i class="icon-ok-sign"></i>Lớp 1</a></li>
-					  <li><a href="#" class="list"><i class="icon-ok-sign"></i>Lớp 2</a></li>
-					  <li><a href="#" class="list"><i class="icon-ok-sign"></i>Lớp 3</a></li>
-					  <li class="nav-header">Tài liệu</li>
-					</ul>					
-				</div>
-    		</div>
-    		<div class="span10">
-    			<!-- body content -->
-    			<!-- 
-    			<ul class="breadcrumb">
-				  <li style="color: white; text-shadow: none;"><img src="images/leaf-green.png" class="profile-tab-avatar">Username</li>
-				</ul>
-				 -->
-				<div class="row-fluid show-grid">
-					<div class="span12">
-						<div class="row-fluid show-grid">
-						  	<div class="span6">
-								<div class="btn-group" style="margin-left:22px;">
-									<button type="button" class="btn btn-success"
-										data-toggle="collapse" data-target="#collapse">Tạo câu hỏi</button>
-								</div>
-						  	</div>
-						</div>
-				  	</div>			
-					<div class="span12">
-						<div class="page-header">
-							<h4>Danh sách câu hỏi đã tạo</h4>
-						</div>
-						<table class="table table-hover">
-							<thead>
-								<tr>
-									<th>ID</th>
-									<th>Môn học</th>
-									<th>Loại câu hỏi</th>
-									<th>Gợi ý</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<td>1</td>
-									<td>Hóa</td>
-									<td>Trắc nghiệm</td>
-									<td>Có</td>
-								</tr>
-								<tr>
-									<td>2</td>
-									<td>Lý</td>
-									<td>Trắc nghiệm</td>
-									<td>Có</td>
-								</tr>
-								<tr>
-									<td>3</td>
-									<td>Toán</td>
-									<td>Tự luận</td>
-									<td>Có</td>
-								</tr>
-							</tbody>
-						</table>
-					</div>
-				</div>
-    		</div>
-    	</div>
-    </div>
-	<footer id="footer">
-		<div class="footer-container">
-			<div class="row-fluid main-links">
-				<div class="span2">
-					<ul>
-						<li class="heading footer-scroll-cue">About</li>
-						<li><a href="/about">Our Mission</a>
-						</li>
-						<li><a href="/about/blog">Blog</a>
-						</li>
-						<li><a href="/about/the-team">Our Team</a>
-						</li>
-						<li><a href="/about/our-interns">Our Interns</a>
-						</li>
-						<li><a href="/about/our-content-specialists">Our Content
-								Specialists</a>
-						</li>
-						<li><a href="/about/our-supporters">Our Supporters</a>
-						</li>					
-					</ul>
-				</div>
-				<div class="span2">
-					<ul>
-						<li class="heading footer-scroll-cue">Help</li>
-						<li><a href="/reportissue?type=Defect&amp;issue_labels="
-							data-tag="Footer" id="report" class="show-demo-dialog">Report
-								a Problem</a>
-						</li>
-						<li><a href="http://khanacademy.desk.com/">FAQ</a>
-						</li>
-					</ul>
-				</div>
-				<div class="span2">
-					<ul>
-						<li class="heading footer-scroll-cue">Contact Us</li>
-						<li><a href="http://khanacademy.desk.com/">Contact</a>
-						</li>
-						<li><a
-							href="http://khanacademy.desk.com/customer/portal/articles/441307-press-room">Press</a>
-						</li>
-					</ul>
-				</div>
-				<div class="span2">
-					<ul>
-						<li class="heading footer-scroll-cue">Coaching</li>
-						<li><a href="/class_profile">Coach Dashboard</a>
-						</li>
-						<li><a href="/coach-res">Coach Resources</a>
-						</li>
-						<li><a href="/coach-res/case-studies">Case Studies</a>
-						</li>
-						<li><a href="/commoncore">Common Core</a>
-						</li>
-					</ul>
-				</div>
-				<div class="span2">
-					<ul>
-						<li class="heading footer-scroll-cue">More</li>
-						<li><a href="/donate">Donate</a>
-						</li>
-						<li><a href="/contribute">Contribute</a>
-						</li>
-						<li><a href="http://shop.khanacademy.org/">Shop KA</a>
-						</li>
-					</ul>
-				</div>
-				
-				<!-- 
-				<div class="span1">
-					<img class="handtree"
-						src="https://khan-academy.appspot.com/images/khan-logo-vertical-transparent.png">
-				</div>
-				-->
-			</div>
-			<div class="extra-links clearfix">
-				<div class="legal">
-					<span><a href="/about/tos">Terms of Use</a>
-					</span>
-				</div>
-				<div class="legal">
-					<span><a href="/about/privacy-policy">Privacy Policy</a>
-					</span>
-				</div>
-
-				<div class="copyright"
-					title="Version: 0822-d9e68d89657f.369699905479567331">
-					© 2013 Konocy - Bill Academy <br> Except where noted, all rights
-					reserved.
-				</div>
-			</div>
-		</div>
-	</footer>
-	<script src="http://code.jquery.com/jquery.js"></script>
-    <script src="public/js/bootstrap.min.js"></script>
-  </body>
-</html>
+	<table class="table table-hover">
+		<thead>
+			<tr>
+				<th>Lớp</th>
+				<th>Môn</th>
+				<th>Chương trình học</th>
+				<th>ID</th>
+				<th>Loại câu hỏi</th>
+				<th>Có gợi ý</th>
+				<th>Ngày khởi tạo</th>
+				<th>Ngày sửa cuối</th>
+				<th>Chỉnh sửa</th>
+				<th>Preview</th>
+			</tr>
+		</thead>
+		<tbody>
+			<?php
+				foreach($list_questions as $row){
+			?>
+			<tr>
+				<td><?php echo $row['grade'] ?></td>
+				<td><?php echo $row['subject'] ?></td>
+				<td><?php echo $row['curriculum'] ?></td>
+				<td><?php echo $row['id'] ?></td>
+				<td><?php echo $row['question_type'] ?></td>
+				<td><?php echo ($row['hint']) ? "Có" : "Không" ?></td>
+				<td><?php echo $row['date_created'] ?></td>
+				<td><?php echo $row['date_edited'] ?></td>
+				<td><a href="javascript:void()" onclick="edit('<?php echo $row['id'] ?>')">Edit</a></td>
+				<td><a href="javascript:void()" onclick="preview('<?php echo $row['id'] ?>')">Preview</a></td>
+			</tr>
+			<?php
+				}
+			?>			
+		</tbody>
+	</table>
+</div>				
