--- a/application/modules/teacher/views/question/multichoice_fullpoint.html
+++ b/application/modules/teacher/views/question/multichoice_fullpoint.html
@@ -126,7 +126,7 @@
 				<span class="toggle-handle btn"></span>
 			</div>
 		</div>
-		<div style="margin-left:2px;" class="toggle off btn btn-primary disabled button_show_right_answer button_show_right_answer_<?php echo $type4  ?>" data-toggle="">
+		<div class="toggle off btn btn-primary disabled button_show_right_answer button_show_right_answer_<?php echo $type4  ?>" data-toggle="">
 			<input id="show_right_<?php echo $type4  ?>" type="checkbox">
 			<div class="toggle-group">
 				<label class="toggle-on btn btn-primary">Hiện</label> 
