--- a/application/modules/teacher/views/question/multichoice_partpoint.html
+++ b/application/modules/teacher/views/question/multichoice_partpoint.html
@@ -162,7 +162,7 @@
 				<span class="toggle-handle btn"></span>
 			</div>
 		</div>
-		<div style="margin-left:2px;" class="toggle off btn btn-primary disabled button_show_right_answer button_show_right_answer_<?php echo $type5  ?>" data-toggle="">
+		<div class="toggle off btn btn-primary disabled button_show_right_answer button_show_right_answer_<?php echo $type5  ?>" data-toggle="">
 			<input id="show_right_<?php echo $type5  ?>" type="checkbox">
 			<div class="toggle-group">
 				<label class="toggle-on btn btn-primary">Hiện</label> 
