--- a/application/modules/teacher/views/question/multichoice_trad_edit.html
+++ b/application/modules/teacher/views/question/multichoice_trad_edit.html
@@ -1,40 +1,3 @@
-<script src="../public/js/multichoice_constraints.js"></script>
-<script>
-tinyMCE.init({
-	mode : "specific_textareas",
-	editor_selector : "editor",
-	theme : "advanced",
-	height: "150",
-	theme_advanced_buttons1 : "fontselect,fontsizeselect,bold,italic,underline,strikethrough,separator,sub,sup,separator,cut,copy,paste,undo,redo",
-	theme_advanced_buttons2 : "justifyleft,justifycenter,justifyright,justifyfull,separator,numlist,bullist,outdent,indent,separator,forecolor,separator,hr,link,unlink,image,media,table,code,separator,asciimath,asciimathcharmap,asciisvg",
-	theme_advanced_buttons3 : "",
-	theme_advanced_fonts : "Arial=arial,helvetica,sans-serif,Courier New=courier new,courier,monospace,Georgia=georgia,times new roman,times,serif,Tahoma=tahoma,arial,helvetica,sans-serif,Times=times new roman,times,serif,Verdana=verdana,arial,helvetica,sans-serif",
-	theme_advanced_toolbar_location : "top",
-	theme_advanced_toolbar_align : "left",
-	theme_advanced_resizing: false,
-	theme_advanced_statusbar_location : "bottom",
-	plugins : 'asciimath,asciisvg,table,inlinepopups,media,autoresize',
-	autoresize_min_height : "150",
-	setup : function(ed) {
-	    ed.onKeyUp.add(function(ed, e) {
-	        //console.debug('Key up event: ' + e.keyCode);
-	        var textarea_id = tinyMCE.activeEditor.editorId;
-	        var id_array = textarea_id.split("_");
-	        var question_content = tinyMCE.get(textarea_id).getContent();
-	        //alert(textarea_id);
-	        $('#preview_question_0101').html(question_content);
-	        MathJax.Hub.Queue(["Typeset",MathJax.Hub,"preview_question_0101"]);
-	        //document.getElementByClass('question_content_trad').innerHTML = question_content;
-	    });
-	},
-	AScgiloc : 'http://www.imathas.com/editordemo/php/svgimg.php',			      //change me  
-	ASdloc : 'http://www.imathas.com/editordemo/jscripts/tiny_mce/plugins/asciisvg/js/d.svg',  //change me  	
-	content_css : "../public/css/content.css"		       
-});	
-</script>
-<script src="../public/js/preview.js"></script>
-<script src="../public/js/ajax_slide_animation.js"></script>
-<script src="../public/js/auto_add_div.js"></script>
 <div class="tab-pane fade active in" id="<?php echo $type1  ?>">
 	<div class="span6">
 		<div class="page-header">
@@ -99,8 +62,8 @@ tinyMCE.init({
 							$i++;
 					?>
 					<fieldset id="<?php echo $i ?>_<?php echo $type1  ?>">						
-						<textarea id="hint1_<?php echo $type1  ?>" class="hint hint_<?php echo $type1  ?>"
-							onkeyup="add_more_choice(this,1,2,'<?php echo $type1  ?>')" placeholder="Gợi ý 1"><?php if(isset($row[$i-1]) && $row[$i-1]!=null) print $row[$i-1] ?></textarea>						
+						<textarea id="hint<?php echo $i ?>_<?php echo $type1  ?>" class="hint hint_<?php echo $type1  ?>"
+							onkeyup="add_more_choice(this,<?php echo $i ?>,2,'<?php echo $type1  ?>')" placeholder="Gợi ý <?php echo $i ?>"><?php if(isset($row[$i-1]) && $row[$i-1]!=null) print $row[$i-1] ?></textarea>						
 					</fieldset>
 					<?php
 							}
@@ -137,7 +100,7 @@ tinyMCE.init({
 					$i++;
 			?>
 			<fieldset id="<?php echo $i ?>_<?php echo $type1  ?>">
-				<label for="choice<?php echo $i ?>_<?php echo $type1  ?>">Lựa chọn A</label>
+				<label for="choice<?php echo $i ?>_<?php echo $type1  ?>">Lựa chọn <?php echo change_to_letter($i) ?></label>
 				<textarea id="choice<?php echo $i ?>_<?php echo $type1  ?>" class="choice_<?php echo $type1  ?> choice"><?php echo $row['content'] ?></textarea>
 				<div class="multichoice_radio toggle btn btn-primary <?php if($row['is_right']==0) echo 'off' ?>" data-toggle="toggle">
 					<input type="checkbox" id="choice<?php echo $i ?>_right_<?php echo $type1  ?>"
@@ -158,6 +121,6 @@ tinyMCE.init({
 		</form>
 		<button class="btn btn-large btn-primary"
 			style="display: block; margin-top: 20px;" type="button"
-			onclick="edit_question('<?php echo $type1  ?>',<?php echo $question_id ?>)">Sửa câu hỏi</button>
+			onclick="edit_question('<?php echo $type1  ?>',<?php echo $question_id ?>)">Lưu câu hỏi</button>
 	</div>
 </div>
