--- a/application/modules/teacher/views/question/tab_question_type.html
+++ b/application/modules/teacher/views/question/tab_question_type.html
@@ -35,13 +35,31 @@
     		}
 			?>
 	</select>
+	<?php
+		if(!isset($question_id)){
+	?>
 	<span style="float:right;margin-right:10px;"><a id="manage_question_slide" href="javascript:void()" class="btn btn-small btn-primary">Quản lý câu hỏi</a></span>
+	<?php
+		}
+	?>
 	<div class="alert" id="alert" style="display: none;">
       <button type="button" class="close" data-dismiss="alert">×</button>
+      <?php
+		if(!isset($question_id)){
+	  ?>
       <strong>Bạn đã tạo câu hỏi thành công!</strong>
+      <?php
+      	}
+	  ?>
    	</div>
    	<div class="alert alert-error" id="error" style="display: none;">
       <button type="button" class="close" data-dismiss="alert">×</button>
+      <?php
+		if(!isset($question_id)){
+	  ?>
       <strong>Có lỗi khi tạo câu hỏi!</strong>
+      <?php
+      	}
+	  ?>
    	</div>
 </ul>
