Fix edit feature - refresh page

--- a/application/modules/teacher/views/question/tab_question_type.html
+++ b/application/modules/teacher/views/question/tab_question_type.html
@@ -60,6 +60,11 @@
       <strong>Có lỗi khi tạo câu hỏi!</strong>
       <?php
       	}
+		else{
+	  ?>
+	  <strong>Có lỗi khi lưu câu hỏi!</strong>
+	  <?php
+	  	}
 	  ?>
    	</div>
 </ul>
