--- a/application/modules/teacher/views/question/multichoice_trad_edit.html
+++ b/application/modules/teacher/views/question/multichoice_trad_edit.html
@@ -121,6 +121,6 @@
 		</form>
 		<button class="btn btn-large btn-primary"
 			style="display: block; margin-top: 20px;" type="button"
-			onclick="edit_question('<?php echo $type1  ?>',<?php echo $question_id ?>)">Lưu câu hỏi</button>
+			onclick="edit_question('<?php echo $type1  ?>',<?php echo $question_id ?>)">Lưu thay đổi</button>
 	</div>
 </div>
